# PacketCode

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  go.mod  go.sum  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/packetcode/: main.go  mcp_config.go  mcp_config_test.go
dev/: DEFERRED_WORK.md
dev/archive/: FUNNEL_SYSTEM_SPEC.md  MARKET_RESEARCH.md
dev/dev/: FLIGHT_DECK_IMPLEMENTATION.md  FLIGHT_DECK_VISION.md
dev/marketing/: master-marketing-plan.html
dev/remediation-plan/: VIBE_CODE_REVIEW.md
docs/: CNAME  code-audit-2026-02-24.md  feature-background-agents.md  feature-diff-component.md  feature-http-cancellation.md  feature-mcp.md  feature-picker-modals.md  feature-slash-autocomplete.md  feature-slash-commands.md  feature-theming.md  index.html  mcp.md  roadmap-deferred.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: binary.rs  messages.rs
src-tauri/src/commands/: analytics.rs  code_quality.rs  deploy.rs  fs.rs  git.rs  github.rs  history.rs  ideation.rs  insights.rs  mcp.rs  memory.rs  mod.rs  pty.rs  scaffold.rs  session.rs  shared.rs  spec.rs  statusline.rs
src-tauri/src/commands/statusline/: claude.rs  codex.rs  helpers.rs  mod.rs
src-tauri/src/session/: manager.rs  types.rs
src/lib/: env.ts  (+9 more)
website/: index.html
(+319 files in other folders)
