[package]
name = "packetcode"
version = "0.1.0"
description = "A custom IDE for Claude Code"
authors = ["PacketCode"]
edition = "2021"

[lib]
name = "packetcode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
